; ModuleID = '/home/carl/AnghaBench/netdata/web/server/extr_web_client.c_check_host_and_call.c'
source_filename = "/home/carl/AnghaBench/netdata/web/server/extr_web_client.c_check_host_and_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.web_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.web_client*, i8*, i32 (i32*, %struct.web_client*, i8*)*)* @check_host_and_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_host_and_call(i32* %0, %struct.web_client* %1, i8* %2, i32 (i32*, %struct.web_client*, i8*)* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.web_client*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32 (i32*, %struct.web_client*, i8*)*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.web_client* %1, %struct.web_client** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 (i32*, %struct.web_client*, i8*)* %3, i32 (i32*, %struct.web_client*, i8*)** %8, align 8
  %9 = load i32 (i32*, %struct.web_client*, i8*)*, i32 (i32*, %struct.web_client*, i8*)** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load %struct.web_client*, %struct.web_client** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 %9(i32* %10, %struct.web_client* %11, i8* %12)
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
